--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -15,7 +15,7 @@
           = label :session, :password, 'Enter your password'
         %td
           = password_field(:session, :password, class: 'input-field')
-          = "(forgot password)"
+          // = "(forgot password)"
           // = link_to "(forgot password)", '/students/forget_password'
       %tr
         %td
@@ -34,6 +34,6 @@
 
 
 <span style="float:right;">
-= mail_to 'forcerequestsystem@gmail.com', "forcerequestsystem@gmail.com", :title => 'forcerequestsystem@gmail.com'
+= mail_to 'cse.frs.feedback@gmail.com', "cse.frs.feedback@gmail.com", :title => 'cse.frs.feedback@gmail.com'
 </span>
 <span style="float:right;">If you encounter any problem with using this system, please email to &nbsp</span>
