--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -34,6 +34,6 @@
 
 
 <span style="float:right;">
-= mail_to 'cse.frs.feedback@gmail.com', "cse.frs.feedback@gmail.com", :title => 'cse.frs.feedback@gmail.com'
+= mail_to 'cse.frs.feedback@gmail.com', "cse.frs.feedback@gmail.com", :title => 'cse.frs.feedback@gmail.com', subject: "FeedBack: " 
 </span>
 <span style="float:right;">If you encounter any problem with using this system, please email to &nbsp</span>
