--- a/app/views/students/forget_password.html.haml
+++ b/app/views/students/forget_password.html.haml
@@ -1,27 +1,27 @@
 %h1 this is the page for forget password
 .forgetPWpage
-  =  form_tag('/students/update_forgotten_password', method: :post) do
+  =  form_tag('/students/sent_reset_password_mail', method: :post) do
     %table{:border => "0"}
       %tr
         %td
           = label :session, :uin, 'Enter your UIN'
         %td
           = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
-      %tr
-        %td
-          = label :session, :uin2, 'ReEnter your UIN'
-        %td
-          = text_field(:session, :uin2, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
-      %tr
-        %td
-          = label :session, :password, 'Enter your new password'
-        %td
-          = password_field(:session, :password, class: 'input-field')
-      %tr
-        %td
-          = label :session, :password2, 'ReEnter your new password'
-        %td
-          = password_field(:session, :password2, class: 'input-field')
+      // %tr
+      //   %td
+      //     = label :session, :uin2, 'ReEnter your UIN'
+      //   %td
+      //     = text_field(:session, :uin2, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
+      // %tr
+      //   %td
+      //     = label :session, :password, 'Enter your new password'
+      //   %td
+      //     = password_field(:session, :password, class: 'input-field')
+      // %tr
+      //   %td
+      //     = label :session, :password2, 'ReEnter your new password'
+      //   %td
+      //     = password_field(:session, :password2, class: 'input-field')
     %br
     %br
     = submit_tag 'Reset'
