interactive_buttons_and_links

--- a/app/views/students/edit_password.html.haml
+++ b/app/views/students/edit_password.html.haml
@@ -19,6 +19,6 @@
           = password_field(:session, :password2, class: 'input-field')
     %br
     %br
-    = submit_tag 'Confirm'
+    = submit_tag 'Confirm', :id => "form_left"
   = form_tag(students_show_path, method: :get) do
-    = submit_tag  "Cancel"
+    = submit_tag  "Cancel", :id => "form_right"
