--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -33,7 +33,9 @@
     = submit_tag 'Sign Up', :id => 'form_right'
 
 
-<span style="float:right;">
-= mail_to 'cse.frs.feedback@gmail.com', "cse.frs.feedback@gmail.com", :title => 'cse.frs.feedback@gmail.com', subject: "FeedBack: " 
-</span>
-<span style="float:right;">If you encounter any problem with using this system, please email to &nbsp</span>
+
+
+
+%span 
+  If you encounter any problem with using this system, please email to 
+  = mail_to 'cse.frs.feedback@gmail.com', "cse.frs.feedback@gmail.com", :title => 'cse.frs.feedback@gmail.com', subject: "FeedBack: "
