--- a/app/views/students/profile.html.haml
+++ b/app/views/students/profile.html.haml
@@ -43,6 +43,6 @@
         //     = select :student_request, 'expected_graduation', @YearSemester
   %br
   %br
-  = submit_tag 'Confirm'
+  = submit_tag 'Confirm', :id => "form_left"
 = form_tag(students_show_path, method: :get) do
-  = submit_tag  "Cancel"
+  = submit_tag  "Cancel", :id => "form_right"
