--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -13,7 +13,7 @@
         %td
           // = text_field(:session, :uin, class: 'input-field')
           = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
-      %tr
+      %trf
         %td
           = label :session, :uin2, 'ReEnter your UIN'
         %td
@@ -39,4 +39,4 @@
     %br
     = submit_tag 'Signup', :id => 'form_left'
   = form_tag(root_path, method: :get) do
-    = submit_tag  "cancel", :id => 'form_right'
+    = submit_tag  "Cancel", :id => 'form_right'
