--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,11 +23,13 @@
     background-color: #DFF2BF;
  }
 #warning {
-    border: 1px solid;
+    /*border: 1px solid;*/
     margin: 10px 0px;
     padding:15px 10px 15px 50px;
     background-repeat: no-repeat;
     background-position: 10px center;
-    color: #D8000C;
-    background-color: #FFBABA;
+    font-weight: bold;
+    font-size: 16px;
+    color: #DC143C;
+    background-color: white;
 }
