--- a/app/views/student_mailer/reset_password.text.erb
+++ b/app/views/student_mailer/reset_password.text.erb
@@ -1,6 +1,8 @@
 Hi <%= @student.name %>,
 
-To confirm your registration click the URL below to reset Password! 
+This email come from the CSE Force Request System, please don't reply.
+
+To click the URL below to reset Password! 
 
 <%= reset_password_url(@student.reset_password_confirm_token) %>
 
