modify the forget password feature

--- a/app/views/student_mailer/reset_password.text.erb
+++ b/app/views/student_mailer/reset_password.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @student.name %>,
 
-This email come from the CSE Force Request System, please don't reply.
+This email comes from the CSE Force Request System, please don't reply.
 
 To click the URL below to reset Password! 
 
