--- a/app/views/students/forget_password.html.haml
+++ b/app/views/students/forget_password.html.haml
@@ -1,4 +1,4 @@
-%h1 this is the page for forget password
+%h1 Reset Your Password
 .forgetPWpage
   =  form_tag('/students/sent_reset_password_mail', method: :post) do
     %table{:border => "0"}
@@ -7,6 +7,7 @@
           = label :session, :uin, 'Enter your UIN'
         %td
           = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
+          = "(You will receive email to reset your password)"  
       // %tr
       //   %td
       //     = label :session, :uin2, 'ReEnter your UIN'
