--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -47,15 +47,17 @@ h1.title {
 }
 span {
   clear: both;
-  float:right;
+  float: right;
+  /*position: relative;*/
+  /*left: 50%;*/
 }
 #form_left {
   float: left;
-  width: 45%;
-  margin-left: 20%;
-  width: 10%;
+  margin-left: 13%;
+  width: 8%;
+  height: 3%;
   color: #E0E0E0;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: bold;
   font-family: "Times New Roman";
 }
@@ -65,11 +67,10 @@ span {
 }
 #form_right {
   float: right;
-  width: 45%;
-  margin-right: 20%;
-  width: 10%;
+  margin-right: 60%;
+  width: 8%;
   color: #E0E0E0;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: bold;
   font-family: "Times New Roman";
 }
