add the caution to comfirmation email

--- a/app/views/student_mailer/registration_confirmation.text.erb
+++ b/app/views/student_mailer/registration_confirmation.text.erb
@@ -3,4 +3,8 @@ Hi <%= @student.name %>,
 Thanks for registering to Force Request System! To confirm your registration click the URL below.
 
 <%= confirm_email_url(@student.confirm_token) %>
+----------------------------------------------------------------------------------------------------------------------
+CAUTION:
+    To using this system, the courses which you force request may be known by others.
+----------------------------------------------------------------------------------------------------------------------
 
