--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -6,7 +6,7 @@
         %td
           = label :session, :name, 'Enter your full name'
         %td
-          = text_field(:session, :name, class: 'input-field', :pattern => "[a-zA-ZüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+", :oninvalid => "this.setCustomValidity('Please enter your Full Name')", :oninput => "this.setCustomValidity('')", :required => true)
+          = text_field(:session, :name, class: 'input-field', :pattern => "[a-zA-ZüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,}", :oninvalid => "this.setCustomValidity('Please enter your Full Name')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :uin, 'Enter your UIN'
