--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -74,7 +74,8 @@
               %td= link_to "Email Selected", "", :onclick => "multi_email(\"#{course}\"); return false"
             %tr{ :class => "excel_sheet"}
               %td= link_to "Download as Excel Sheet", student_requests_getSpreadsheet_path(format: "csv", :course_id => course)
-%p= link_to "Download the entire Force Request System data as Excel Sheet", student_requests_getSpreadsheetAllCourses_path(format: "csv")
+              
+%p= link_to "Download the entire Force Request System data as Excel Sheet", student_requests_getSpreadsheetAllCourses_path(format: "csv"), :id => 'download_table'
 #myModal.modal
   %span.close{:onclick => "return spanclick()"} x
   .modal-content
