--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -91,6 +91,95 @@ span {
 #form_signup:hover {
   text-decoration: underline;
 }
+#signup_button_left {
+  float: left;
+  margin-left: 63%;
+  width: 8%;
+  height: 3%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#signup_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#signup_button_right {
+  float: right;
+  margin-right: 20%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#signup_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#request_button_left {
+  float: left;
+  margin-left: 38%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#request_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#request_button_right {
+  float: right;
+  margin-right: 45%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#request_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#profile_button_left {
+  float: left;
+  margin-left: 41%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#profile_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#profile_button_right {
+  float: right;
+  margin-right: 42%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#profile_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#changePW_button_left {
+  float: left;
+  margin-left: 51%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#changePW_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#changePW_button_right {
+  float: right;
+  margin-right: 32%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#changePW_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
 table {
   margin: 10px;
   border-collapse: collapse;
@@ -415,10 +504,8 @@ select
   border: none;
 }
 #button_confirm {
-  /*float: left;*/
-  margin-left: 48%;
+  margin-left: 47%;
   width: 8%;
-  /*height: 3%;*/
   color: #E0E0E0;
   font-size: 18px;
 }
