fix password set format contraint

--- a/app/views/students/edit_password.html.haml
+++ b/app/views/students/edit_password.html.haml
@@ -6,17 +6,17 @@
         %td
           = label :session, :oldPassword, 'Enter your old password'
         %td
-          = password_field(:session, :oldPassword, class: 'input-field')
+          = password_field(:session, :oldPassword, class: 'input-field', :required => true)
       %tr
         %td
           = label :session, :password, 'Enter your new password'
         %td
-          = password_field(:session, :password, class: 'input-field')
+          = password_field(:session, :password, class: 'input-field', :pattern => "[a-zA-Z0-9_]{6,20}", :oninvalid => "this.setCustomValidity('At least 6 and at most 20 of any letter, number, underscore')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :password2, 'ReEnter your new password'
         %td
-          = password_field(:session, :password2, class: 'input-field')
+          = password_field(:session, :password2, class: 'input-field', :required => true)
     %br
     %br
     = submit_tag 'Confirm', :id => "form_left"
