--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -51,132 +51,30 @@ span {
   /*position: relative;*/
   /*left: 50%;*/
 }
-#forget_password {
-  text-decoration: none;
-}
-#forget_password:hover {
-  text-decoration: underline;
-}
-#email_format {
-  text-decoration: none;
-}
-#email_format:hover {
-  text-decoration: underline;
-}
-#form_login {
+#form_left {
   float: left;
-  margin-left: 35%;
+  margin-left: 13%;
   width: 8%;
   height: 3%;
   color: #E0E0E0;
   font-size: 18px;
-  /*font-weight: bold;*/
-  /*font-family: "Times New Roman";*/
+  font-weight: bold;
+  font-family: "Times New Roman";
 }
-#form_login:hover {
+#form_left:hover {
   color: white;
   background-color: maroon;
 }
-#form_signup {
+#form_right {
   float: right;
-  /*margin-right: 60%;*/
-  width: 8%;
-  color: maroon;
-  font-size: 18px;
-  text-decoration: none;
-  margin: 20px 48% 10px 10px;
-  /*font-weight: bold;*/
-  /*font-family: "Times New Roman";*/
-}
-#form_signup:hover {
-  text-decoration: underline;
-}
-#signup_button_left {
-  float: left;
-  margin-left: 63%;
-  width: 8%;
-  height: 3%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#signup_button_left:hover {
-  color: white;
-  background-color: maroon;
-}
-#signup_button_right {
-  float: right;
-  margin-right: 20%;
+  margin-right: 60%;
   width: 8%;
   color: #E0E0E0;
   font-size: 18px;
+  font-weight: bold;
+  font-family: "Times New Roman";
 }
-#signup_button_right:hover {
-  color: white;
-  background-color: maroon;
-}
-#request_button_left {
-  float: left;
-  margin-left: 38%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#request_button_left:hover {
-  color: white;
-  background-color: maroon;
-}
-#request_button_right {
-  float: right;
-  margin-right: 45%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#request_button_right:hover {
-  color: white;
-  background-color: maroon;
-}
-#profile_button_left {
-  float: left;
-  margin-left: 41%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#profile_button_left:hover {
-  color: white;
-  background-color: maroon;
-}
-#profile_button_right {
-  float: right;
-  margin-right: 42%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#profile_button_right:hover {
-  color: white;
-  background-color: maroon;
-}
-#changePW_button_left {
-  float: left;
-  margin-left: 51%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#changePW_button_left:hover {
-  color: white;
-  background-color: maroon;
-}
-#changePW_button_right {
-  float: right;
-  margin-right: 32%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#changePW_button_right:hover {
+#form_right:hover {
   color: white;
   background-color: maroon;
 }
@@ -230,6 +128,7 @@ caption {
 }
 
 th {
+	
 	color: #4f6b72;
 	border-right: 1px solid #C1DAD7;
 	border-bottom: 1px solid #C1DAD7;
@@ -277,11 +176,11 @@ input[type=submit] {
 input[type= submit].logout-class
 {
   width: 10%;
-  margin-left: 90%;
+  margin-left: 85%;
   color: #E0E0E0;
-  font-size: 18px;
-  /*font-weight: bold;*/
-  /*font-family: "Times New Roman";*/
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Times New Roman";
 }
 input[type= submit].logout-class:hover {
   color: white;
@@ -315,7 +214,7 @@ input[type= submit].logout-class:hover {
 
 .filter_form1 {
     border-radius: 5px;
-    background-color: #E0E0E0;
+    background-color: #f2f2f2;
     /*padding: 2px;*/
     width: 50%;
     float: left;
@@ -323,7 +222,7 @@ input[type= submit].logout-class:hover {
 
 .filter_form2 {
     /*border-radius: 5px;*/
-    background-color: #E0E0E0;
+    background-color: #f2f2f2;
     /*padding: 20px;*/
     margin-left: 50%;
 }
@@ -353,11 +252,13 @@ input[type= submit].logout-class:hover {
     border-radius: 4px;
     box-sizing: border-box;
 }
+
 .update_admin {
   width: 25%;
 }
 
 .regularbutton {
+  width: 22%;
   background-color:brown;
 	border:1px solid brown;
 	border-radius: 10px;
@@ -369,6 +270,7 @@ input[type= submit].logout-class:hover {
 	padding:16px 31px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
+	margin: 5px 5px 5px 5px;
 }
 .regularbutton:hover {
   color: white;
@@ -376,11 +278,9 @@ input[type= submit].logout-class:hover {
 }
 
 input[type=submit].filter {
-    font-size: 15px;
     width: 20%;
-    background-color: brown;
-    /*color: white;*/
-    color: #E0E0E0;
+    background-color: maroon;
+    color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -388,10 +288,6 @@ input[type=submit].filter {
     cursor: pointer;
 }
 
-input[type=submit].filter:hover {
-  color: white;
-  background-color: maroon;
-}  
 label {
   font-size: 17px;
 }
@@ -456,14 +352,7 @@ table.sortableadmin thead {
     table-layout: fixed;
     width: 100%;
 }
-#download_table {
-    font-size: 15px;
-    color: brown;
-    text-decoration: none;
-}
-#download_table:hover {
-    text-decoration: underline;
-}
+
 select 
 {
     height:45px;
@@ -503,13 +392,6 @@ select
   font-style: normal;
   border: none;
 }
-#button_confirm {
-  margin-left: 47%;
-  width: 8%;
-  color: #E0E0E0;
-  font-size: 18px;
-}
-#button_confirm:hover {
-  color: white;
-  background-color: maroon;
+#adminprivileges {
+  
 }
