--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -51,30 +51,132 @@ span {
   /*position: relative;*/
   /*left: 50%;*/
 }
-#form_left {
+#forget_password {
+  text-decoration: none;
+}
+#forget_password:hover {
+  text-decoration: underline;
+}
+#email_format {
+  text-decoration: none;
+}
+#email_format:hover {
+  text-decoration: underline;
+}
+#form_login {
   float: left;
-  margin-left: 13%;
+  margin-left: 35%;
   width: 8%;
   height: 3%;
   color: #E0E0E0;
   font-size: 18px;
-  font-weight: bold;
-  font-family: "Times New Roman";
+  /*font-weight: bold;*/
+  /*font-family: "Times New Roman";*/
 }
-#form_left:hover {
+#form_login:hover {
   color: white;
   background-color: maroon;
 }
-#form_right {
+#form_signup {
   float: right;
-  margin-right: 60%;
+  /*margin-right: 60%;*/
+  width: 8%;
+  color: maroon;
+  font-size: 18px;
+  text-decoration: none;
+  margin: 20px 48% 10px 10px;
+  /*font-weight: bold;*/
+  /*font-family: "Times New Roman";*/
+}
+#form_signup:hover {
+  text-decoration: underline;
+}
+#signup_button_left {
+  float: left;
+  margin-left: 63%;
+  width: 8%;
+  height: 3%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#signup_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#signup_button_right {
+  float: right;
+  margin-right: 20%;
   width: 8%;
   color: #E0E0E0;
   font-size: 18px;
-  font-weight: bold;
-  font-family: "Times New Roman";
 }
-#form_right:hover {
+#signup_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#request_button_left {
+  float: left;
+  margin-left: 38%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#request_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#request_button_right {
+  float: right;
+  margin-right: 45%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#request_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#profile_button_left {
+  float: left;
+  margin-left: 41%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#profile_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#profile_button_right {
+  float: right;
+  margin-right: 42%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#profile_button_right:hover {
+  color: white;
+  background-color: maroon;
+}
+#changePW_button_left {
+  float: left;
+  margin-left: 51%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#changePW_button_left:hover {
+  color: white;
+  background-color: maroon;
+}
+#changePW_button_right {
+  float: right;
+  margin-right: 32%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#changePW_button_right:hover {
   color: white;
   background-color: maroon;
 }
@@ -128,7 +230,6 @@ caption {
 }
 
 th {
-	
 	color: #4f6b72;
 	border-right: 1px solid #C1DAD7;
 	border-bottom: 1px solid #C1DAD7;
@@ -176,11 +277,11 @@ input[type=submit] {
 input[type= submit].logout-class
 {
   width: 10%;
-  margin-left: 85%;
+  margin-left: 90%;
   color: #E0E0E0;
-  font-size: 25px;
-  font-weight: bold;
-  font-family: "Times New Roman";
+  font-size: 18px;
+  /*font-weight: bold;*/
+  /*font-family: "Times New Roman";*/
 }
 input[type= submit].logout-class:hover {
   color: white;
@@ -214,7 +315,7 @@ input[type= submit].logout-class:hover {
 
 .filter_form1 {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #E0E0E0;
     /*padding: 2px;*/
     width: 50%;
     float: left;
@@ -222,7 +323,7 @@ input[type= submit].logout-class:hover {
 
 .filter_form2 {
     /*border-radius: 5px;*/
-    background-color: #f2f2f2;
+    background-color: #E0E0E0;
     /*padding: 20px;*/
     margin-left: 50%;
 }
@@ -252,13 +353,13 @@ input[type= submit].logout-class:hover {
     border-radius: 4px;
     box-sizing: border-box;
 }
-
 .update_admin {
   width: 25%;
 }
 
 .regularbutton {
-  width: 22%;
+  width: 20%;
+  margin: 10px 10px 10px 10px;
   background-color:brown;
 	border:1px solid brown;
 	border-radius: 10px;
@@ -270,7 +371,6 @@ input[type= submit].logout-class:hover {
 	padding:16px 31px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
-	margin: 5px 5px 5px 5px;
 }
 .regularbutton:hover {
   color: white;
@@ -278,9 +378,11 @@ input[type= submit].logout-class:hover {
 }
 
 input[type=submit].filter {
+    font-size: 15px;
     width: 20%;
-    background-color: maroon;
-    color: white;
+    background-color: brown;
+    /*color: white;*/
+    color: #E0E0E0;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -288,6 +390,10 @@ input[type=submit].filter {
     cursor: pointer;
 }
 
+input[type=submit].filter:hover {
+  color: white;
+  background-color: maroon;
+}  
 label {
   font-size: 17px;
 }
@@ -352,7 +458,14 @@ table.sortableadmin thead {
     table-layout: fixed;
     width: 100%;
 }
-
+#download_table {
+    font-size: 15px;
+    color: brown;
+    text-decoration: none;
+}
+#download_table:hover {
+    text-decoration: underline;
+}
 select 
 {
     height:45px;
@@ -392,6 +505,13 @@ select
   font-style: normal;
   border: none;
 }
-#adminprivileges {
-  
+#button_confirm {
+  margin-left: 47%;
+  width: 8%;
+  color: #E0E0E0;
+  font-size: 18px;
+}
+#button_confirm:hover {
+  color: white;
+  background-color: maroon;
 }
