fix alert window

--- a/app/views/students/edit_password.html.haml
+++ b/app/views/students/edit_password.html.haml
@@ -18,6 +18,6 @@
         %td
           = password_field(:session, :password2, class: 'input-field', :required => true)
           
-    = submit_tag 'Confirm', :id => "changePW_button_left", :data => { confirm: 'An email will be sent to you. Continue?'}
+    = submit_tag 'Confirm', :id => "changePW_button_left"
   = form_tag(students_show_path, method: :get) do
     = submit_tag  "Cancel", :id => "changePW_button_right"
