--- a/app/views/student_requests/login_page.html.haml
+++ b/app/views/student_requests/login_page.html.haml
@@ -15,7 +15,7 @@
           = label :session, :password, 'Enter your password'
         %td
           = password_field(:session, :password, class: 'input-field')
-          = link_to "Forgot password", '/students/forget_password', :id => 'forget_password'
+          = link_to "(Forgot password)", '/students/forget_password', :id => 'forget_password'
       %tr
         %td
           = label :session, :user, 'Login as'
