--- a/app/views/students/edit_password.html.haml
+++ b/app/views/students/edit_password.html.haml
@@ -1,4 +1,4 @@
-%h1 this is the page for forget password
+%h1 Change Your Password
 .forgetPWpage
   =  form_tag(students_update_password_path, method: :post) do
     %table{:border => "0"}
