--- a/app/views/students/forget_password.html.haml
+++ b/app/views/students/forget_password.html.haml
@@ -7,24 +7,8 @@
           = label :session, :uin, 'Enter your UIN'
         %td
           = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
-          = "(You will receive email to reset your password)"  
-      // %tr
-      //   %td
-      //     = label :session, :uin2, 'ReEnter your UIN'
-      //   %td
-      //     = text_field(:session, :uin2, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
-      // %tr
-      //   %td
-      //     = label :session, :password, 'Enter your new password'
-      //   %td
-      //     = password_field(:session, :password, class: 'input-field')
-      // %tr
-      //   %td
-      //     = label :session, :password2, 'ReEnter your new password'
-      //   %td
-      //     = password_field(:session, :password2, class: 'input-field')
     %br
     %br
-    = submit_tag 'Reset'
-  = form_tag(students_show_path, method: :get) do
+    = submit_tag 'Reset', :data => { confirm: 'An email will be sent to your TAMU email!'}
+  = form_tag(root_path, method: :get) do
     = submit_tag  "Cancel"
