--- a/app/views/students/reset_password.html.haml
+++ b/app/views/students/reset_password.html.haml
@@ -1,4 +1,4 @@
-%h1 this is the page for reset password
+%h1 Reset Your Password
 .forgetPWpage
     %h2= "Howdy! #{session_get(:name)}(#{session_get(:uin)}), please reset your password"
     =  form_tag('/students/update_reset_password', method: :post) do
@@ -16,3 +16,5 @@
         %br
         %br
         = submit_tag 'Reset'
+    = form_tag(root_path, method: :get) do
+        = submit_tag  "Cancel"
