--- a/app/views/students/forget_password.html.haml
+++ b/app/views/students/forget_password.html.haml
@@ -6,9 +6,11 @@
         %td
           = label :session, :uin, 'Enter your UIN'
         %td
-          = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')")
+          = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Please enter 9 numbers of UIN')", :oninput => "this.setCustomValidity('')", :required => true)
+          (An email will be sent to your TAMU email!)
     %br
     %br
-    = submit_tag 'Reset', :data => { confirm: 'An email will be sent to your TAMU email!'}
+    = submit_tag 'Reset'
+    // = submit_tag 'Reset', :data => { confirm: 'An email will be sent to your TAMU email!'}
   = form_tag(root_path, method: :get) do
     = submit_tag  "Cancel"
