--- a/app/views/student_requests/new.html.haml
+++ b/app/views/student_requests/new.html.haml
@@ -56,12 +56,12 @@
             = select :student_request, 'request_semester', @requestSemester, :required => true
         %tr
           %td   
-            = label :student_request, :course_id, 'Course Number*'
+            = label :student_request, :course_id, 'Course Number* (Eg: 629 for CSCE 629-600)'
           %td  
             = text_field :student_request, 'course_id', class: 'input-field', :required => true
         %tr
           %td   
-            = label :student_request, :section_id, 'Section Number*'
+            = label :student_request, :section_id, 'Section Number* (Eg: 600 for CSCE 629-600)'
           %td  
             = text_field :student_request, 'section_id', class: 'input-field', :required => true
         %tr
