--- a/app/views/students/add_new_student.html.haml
+++ b/app/views/students/add_new_student.html.haml
@@ -41,4 +41,7 @@
           = label :session, :password, 'the initial password:'
         %td
           = text_field(:session, :password, class: 'input-field', value: '123456')
-    = submit_tag 'Comfirm', :id => 'button_confirm'
+    = submit_tag 'Comfirm', :id => 'request_button_left'
+    
+  = form_tag(student_requests_adminprivileges_path, method: :get) do
+    = submit_tag 'Cancel', :id => 'request_button_right'
