--- a/app/views/students/add_new_student.html.haml
+++ b/app/views/students/add_new_student.html.haml
@@ -10,17 +10,17 @@
         %td
           = label :session, :name, 'full name of student:'
         %td
-          = text_field(:session, :name, class: 'input-field',:required => true)
+          = text_field(:session, :name, class: 'input-field', :pattern => "[a-zA-ZüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,}", :oninvalid => "this.setCustomValidity('Please enter student Full Name')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :uin, 'UIN of Student:'
         %td
-          = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')",:required => true)
+          = text_field(:session, :uin, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Please enter 9 numbers of UIN')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :uin2, 're-enter UIN of student:'
         %td
-          = text_field(:session, :uin2, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Invalid UIN')", :oninput => "this.setCustomValidity('')", :required => true)
+          = text_field(:session, :uin2, class: 'input-field', :pattern => "[0-9]{9}", :oninvalid => "this.setCustomValidity('Please enter 9 numbers of UIN')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :email, 'email of student:(Please enter the tamu email)'
