--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -4,9 +4,9 @@
     %table{:border => "0"}
       %tr
         %td
-          = label :session, :name, 'Enter your full name'
+          = label :session, :name, 'Enter LastName, FirstName'
         %td
-          = text_field(:session, :name, class: 'input-field', :pattern => "[a-zA-ZüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,}", :oninvalid => "this.setCustomValidity('Please enter your Full Name')", :oninput => "this.setCustomValidity('')", :required => true)
+          = text_field(:session, :name, class: 'input-field', :pattern => "([A-Za-z]+),\\s+([A-Za-z]+)", :oninvalid => "this.setCustomValidity('Please enter LastName, FirstName')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :uin, 'Enter your UIN'
@@ -26,6 +26,11 @@
           // = text_field(:session, :email, class: 'input-field')
           = text_field(:session, :email, class: 'input-field', placeholder: 'xxx@tamu.edu', :pattern => "[a-z0-9._-]{1,}@tamu\.edu", :oninvalid => "this.setCustomValidity('Please enter TAMU Email Address')", :oninput => "this.setCustomValidity('')", :required => true)
           // = text_field(:session, :email, class: 'input-field', :oninvalid => "this.setCustomValidity('Not TAMU Email Address')", :oninput => "this.setCustomValidity('')")
+      %tr
+        %td
+          = label :session, :major, 'Enter your Major'
+        %td
+          = text_field(:session, :major, class: 'input-field', :pattern => "([a-zA-Z]+) ([a-zA-Z]+)", :oninvalid => "this.setCustomValidity('Please enter your Major')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
           = label :session, :password, 'Enter your password'
